ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/CalendarEvent__c.object-meta.xml
<CustomObject>
    <label>Calendar Event</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Calendar Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>