ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/fields/ContentLanguage__c.field-meta.xml
<CustomField>
    <fullName>ContentLanguage__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Operating_Languages</valueSetName>
    </valueSet>
</CustomField>