ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/fields/Internal_Community_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Community_Link__c</fullName>
    <label>Internal Community Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>