ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>icLinkTypes</valueSetName>
    </valueSet>
</CustomField>