ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/fields/Publish_in__c.field-meta.xml
<CustomField>
    <fullName>Publish_in__c</fullName>
    <description>This field is use to filter the calendar event shown in the Calendar , Calendar list Lighning compoments  on communities portal of the logued user.</description>
    <inlineHelpText>Please Select in which community you want to publish your calendar event. Multi selection is alowed.</inlineHelpText>
    <label>Publish in</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommunityName</valueSetName>
    </valueSet>
</CustomField>