ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CalendarEvent__c/listViews/ALL_Calendar_Events.listView-meta.xml
<ListView>
    <fullName>ALL_Calendar_Events</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description_Long_Txt_Area__c</columns>
    <columns>EventDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ContentLanguage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calendar Events</label>
</ListView>